--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>HOME | SomeWebsiteName.Whatever</title>
 
   <!-- stylesheets -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
